Fix password value overlapping with eye

--- a/src/app/shared/component/password/password.component.scss
+++ b/src/app/shared/component/password/password.component.scss
@@ -1,10 +1,13 @@
 .password {
-	position: relative;
+	display: flex;
 
 	&__toggle {
+		margin-left: 10px;
+
+		width: 26px;
+		height: 22px;
+
 		cursor: pointer;
-		position: absolute;
-		right: 0;
 
 		color: #9e9e9e;
 	}
